@@ -30,27 +30,34 @@ public class CategoryService {
     @Autowired
     static VariationService staticVariationService;
 
+    public Page<CategoryDTO> getALLS(Pageable pageable) {
+        Page<Category> list = categoryRepository.findAll(pageable);
+        return list.map(category -> new CategoryDTO(category));
+    }
+
     public List<CategoryDTO> getALL() {
         List<Category> list = categoryRepository.findAll();
-        return list.stream().map(category -> new CategoryDTO(category)).collect(Collectors.toList());
+        return list.stream().map(category -> new CategoryDTO(category)).toList();
     }
+
     public Category add(CategoryDTO categoryDTO) {
         return categoryRepository.save(new Category(categoryDTO));
     }
+
     public Category update(CategoryDTO categoryDTO) {
         return categoryRepository.save(new Category(categoryDTO));
     }
+
     public void delete(Long id) {
         Category category = categoryRepository.findById(id).get();
         categoryRepository.delete(category);
     }
+
     public List<CategoryDTO> search(String query) {
-       List<Category> list = categoryRepository.findByName(query);
+        List<Category> list = categoryRepository.findByName(query);
 
-       return list.stream().map(category -> new CategoryDTO(category)).collect(Collectors.toList());
+        return list.stream().map(category -> new CategoryDTO(category)).collect(Collectors.toList());
     }
-
-
 
 
 }
